// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled test styled overrideStyles 1`] = `
.c0 {
  color: red;
}

<div>
  <button
    class="c0 xl-demo-button"
  >
    click
  </button>
</div>
`;

exports[`styled test styled overrideStyles 2`] = `
.c0 {
  color: red;
  color: blue;
}

<div>
  <button
    class="c0 xl-demo-button"
  >
    click
  </button>
</div>
`;
